--- a/SFML/SFML.vcxproj
+++ b/SFML/SFML.vcxproj
@@ -163,9 +163,11 @@ sfml-system-d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     <ClCompile Include="..\src\game\game.cpp" />
     <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\src\objects\player.cpp" />
+    <ClCompile Include="..\src\objects\ball.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\game\game.h" />
+    <ClInclude Include="..\src\objects\ball.h" />
     <ClInclude Include="..\src\objects\player.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
