--- a/SFML/SFML.vcxproj.filters
+++ b/SFML/SFML.vcxproj.filters
@@ -8,6 +8,9 @@
     <ClCompile Include="..\src\objects\player.cpp">
       <Filter>objects</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\objects\ball.cpp">
+      <Filter>objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="game">
@@ -22,6 +25,9 @@
       <Filter>game</Filter>
     </ClInclude>
     <ClInclude Include="..\src\objects\player.h">
+      <Filter>objects</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\objects\ball.h">
       <Filter>objects</Filter>
     </ClInclude>
   </ItemGroup>
